--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="/js/froogaloop2.min.js"></script>
     <link rel="stylesheet" href="/stylesheets/base.css" type="text/css" media=screen>
     <link rel="stylesheet" href="/stylesheets/reset.css" type="text/css" media=screen>
+    <link rel="stylesheet" href="/stylesheets/screeningroom.css" type="text/css" media=screen>
     <script>
 
     $(document).ready(function(){
