--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Video</title>
-    <script src="public/socket.io/socket.io.js"></script>
-    <script src="public/js/jquery-1.6.2.min.js"></script>
-    <script src="public/js/froogaloop2.min.js"></script>
-    <link rel="stylesheet" href="public/stylesheets/base.css" type="text/css" media=screen>
-    <link rel="stylesheet" href="public/stylesheets/reset.css" type="text/css" media=screen>
-    <link rel="stylesheet" href="public/stylesheets/screeningroom.css" type="text/css" media=screen>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/jquery-1.6.2.min.js"></script>
+    <script src="/js/froogaloop2.min.js"></script>
+    <link rel="stylesheet" href="/stylesheets/base.css" type="text/css" media=screen>
+    <link rel="stylesheet" href="/stylesheets/reset.css" type="text/css" media=screen>
+    <link rel="stylesheet" href="/stylesheets/screeningroom.css" type="text/css" media=screen>
     <script>
 
     $(document).ready(function(){
