--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
 
     <div id="embed"></div>
     <div>
+    	<div id="avatar-box" class="chrome">
+    		<div class="avatar bird"></div>
+    		
+    		<div class="avatar-menu">
+    			<div class="avatar monkey"></div>
+    			<div class="avatar bird"></div>
+    			<div class="avatar cow"></div>
+    			<div class="avatar monster"></div>
+    		</div>
+    	</div>
         <form id="set-nickname" action="javascript: set_nickname()" style="display:inherit">
             <input class="enter" type="text" name="username" value="" placeholder="Set Your Username!" id="username" >
             <input class="submit" type="submit" value="Set username">
