set get nickname and send in hash

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
         <form class="top-form" id="set-nickname" style="display:none">
             <input class="enter" type="text" name="username" value="" placeholder="Set Your Username!" id="username" >
+            <input type="hidden" name="oauth_token" id="oauth_token">
+            <input type="hidden" name="oauth_token_secret" id="oauth_token_secret">
             <input class="submit" type="submit" value="Set username">
             <div id="avatar-box" class="chrome">
                 <div class="avatar bird"></div>
