--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div class="search-input">
                 
                     <form id="add-video" action="javascript: add_video(document.getElementById('new_video_url').value,document.getElementById('username').value)" style="display:none;width:180px;margin-left:2px;">
-                        <input class="enter" type="text" name="new_video" value="" placeholder="Vimeo Video URL Here" id="new_video_url" style="width:180px;margin-left:2px;margin-bottom:5px;">
+                        <input id="search_vid class="enter" type="text" name="new_video" value="" placeholder="Vimeo Video URL Here" id="new_video_url" style="width:180px;margin-left:2px;margin-bottom:5px;">
                         <input class="submit" type="submit" value="Add video &rarr;" style="width:180px;margin-left:2px">
                     </form>
                     
