--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
             
     </div>
 
+    <div class="credits">
+        By <a href="http://twitter.com/dpwolf">@dpwolf</a> &amp; <a href="http://twitter.com/duhoang">@duhoang</a> with help from <a href="http://twitter.com/nickpgreenfield">@nickpgreenfield</a> and <a href="http://twitter.com/rabihnassar">@rabihnassar</a>
+    </div>
   </div><!--wrapper-->
 
   <div id="right_column">
