added hackday link

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </div>
 
     <div class="credits">
-        By <a href="http://twitter.com/dpwolf">@dpwolf</a> &amp; <a href="http://twitter.com/duhoang">@duhoang</a> with help from <a href="http://twitter.com/nickpgreenfield">@nickpgreenfield</a> and <a href="http://twitter.com/rabihnassar">@rabihnassar</a>
+        By <a href="http://twitter.com/dpwolf">@dpwolf</a> &amp; <a href="http://twitter.com/duhoang">@duhoang</a><br /> with help from <a href="http://twitter.com/nickpgreenfield">@nickpgreenfield</a> and <a href="http://twitter.com/rabihnassar">@rabihnassar</a> at <a href="http://hackday.tv">hackday.tv</a>
     </div>
   </div><!--wrapper-->
 
